# inputfilepath

./: CMakeLists.txt  MyButton.qml  main.cpp  main.qml  mycomponent.cpp  mycomponent.h  test.txt
